--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://hongsenliu.github.io/notes"
+baseURL = "http://hongsenliu.github.io/notes"
 languageCode = "en-us"
 title = "ITO"
 
